# agentic-playwright-framework

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: run_tests.yml
config/: config.py
pages/: BasePage.py  HomePage.py
tests/: test_demoblaze.py
utils/: logger.py  publish_summary.py  screenshot_utils.py
